hphp/hack/test/typecheck/unbound_name/record.php.exp
File "record.php", line 13, characters 19-26:
Unbound name: `NotFound` (Naming[2049])
File "record.php", line 14, characters 10-17:
Unbound name: `NotFound` (a record type) (Naming[2049])
File "record.php", line 27, characters 10-14:
Expected a `record` but got a type alias. (Naming[2052])
File "record.php", line 24, characters 6-10:
Alias definition is here.
File "record.php", line 14, characters 10-17:
Expected a record type, but got `NotFound`. (Typing[4364])
File "record.php", line 19, characters 10-10:
Expected a record type, but got `T`. (Typing[4364])
File "record.php", line 19, characters 10-10:
Generics are not allowed in this position. (Typing[4306])
File "record.php", line 27, characters 10-14:
Expected a record type, but got `Alias`. (Typing[4364])
